syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//字典类型表
service DictType {
  //字典类型表-创建一条数据
  rpc CreateDictType(CreateDictTypeReq) returns (CreateDictTypeReply) {
    option (google.api.http) = {
      post: "/admin/v1/dict_type/create"
      body: "*"
    };
  }
  //字典类型表-更新一条数据
  rpc UpdateDictType(UpdateDictTypeReq) returns (UpdateDictTypeReply) {
    option (google.api.http) = {
      post: "/admin/v1/dict_type/update"
      body: "*"
    };
  }
  //字典类型表-更新状态
  rpc UpdateDictTypeStatus(UpdateDictTypeStatusReq) returns (UpdateDictTypeStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/dict_type/update/status"
      body: "*"
    };
  }
  //字典类型表-删除一条数据
  rpc DeleteDictType(DeleteDictTypeReq) returns (DeleteDictTypeReply) {
    option (google.api.http) = {
      post: "/admin/v1/dict_type/delete"
      body: "*"
    };
  }
  //字典类型表-单条数据查询
  rpc GetDictTypeInfo(GetDictTypeInfoReq) returns (GetDictTypeInfoReply) {
    option (google.api.http) = {get: "/admin/v1/dict_type/info"};
  }
  //字典类型表-列表数据查询
  rpc GetDictTypeList(GetDictTypeListReq) returns (GetDictTypeListReply) {
    option (google.api.http) = {get: "/admin/v1/dict_type/list"};
  }
  //字典类型表-选择器
  rpc GetDictTypeSelector(GetDictTypeSelectorReq) returns (GetDictTypeSelectorReply) {
    option (google.api.http) = {get: "/admin/v1/dict_type/selector"};
  }
}

//字典类型表信息
message DictTypeInfo {
  string id = 1; // id
  string name = 2; // 字典名称
  string type = 3; // 字典类型
  int32 status = 4; // 状态（1正常-1停用）
  string remark = 5; // 备注
  string createdAt = 6; // 创建时间
  string updatedAt = 7; // 更新时间
}

//请求-字典类型表-创建一条数据
message CreateDictTypeReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "name",
        "type",
        "status"
      ]
    }
  };

  string name = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 100
  }]; // 字典名称
  string type = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 100
  }]; // 字典类型
  int32 status = 3 [(buf.validate.field).int32 = {
    gt: 0
    lte: 16
  }]; // 状态（1正常-1停用）
  string remark = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 500
    }
  ]; // 备注
}

//响应-字典类型表-创建一条数据
message CreateDictTypeReply {
  string id = 1; // id
}

//请求-字典类型表-更新一条数据
message UpdateDictTypeReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "name",
        "type",
        "status"
      ]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  string name = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 100
  }]; // 字典名称
  string type = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 100
  }]; // 字典类型
  int32 status = 4 [(buf.validate.field).int32 = {
    gt: 0
    lte: 16
  }]; // 状态（1正常-1停用）
  string remark = 5 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 500
    }
  ]; // 备注
}

//响应-字典类型表-更新一条数据
message UpdateDictTypeReply {}

//请求-字典类型表-更新状态
message UpdateDictTypeStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "status"
      ]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
  int32 status = 2 [(buf.validate.field).int32 = {
    gt: 0
    lte: 16
  }]; // 状态（1正常-1停用）
}

//响应-字典类型表-更新状态
message UpdateDictTypeStatusReply {}

//请求-字典类型表-删除一条数据
message DeleteDictTypeReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["ids"]
    }
  };

  repeated string ids = 1 [(buf.validate.field).repeated = {min_items: 1}]; // id集合
}

//响应-字典类型表-删除一条数据
message DeleteDictTypeReply {}

//请求-字典类型表-单条数据查询
message GetDictTypeInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // id
}

//响应-字典类型表-单条数据查询
message GetDictTypeInfoReply {
  DictTypeInfo info = 1;
}

//请求-字典类型表-列表数据查询
message GetDictTypeListReq {
  int32 page = 1; //页码
  int32 pageSize = 2; //页数
  string name = 3; // 字典名称
  string type = 4; // 字典类型
  int32 status = 5; // 状态（1正常-1停用）
}

//响应-字典类型表-列表数据查询
message GetDictTypeListReply {
  int32 total = 1; //总数
  repeated DictTypeInfo list = 2; // 列表数据
}

//字典类型表-选择器
message DictTypeSelector {
  string type = 1; // 字典类型
  string name = 2; // 字典名称
}

//请求-字典类型表-选择器
message GetDictTypeSelectorReq {
  string name = 1; // 字典类型
}

//响应-字典类型表-选择器
message GetDictTypeSelectorReply {
  repeated DictTypeSelector list = 1; // 列表数据
}
